# resource

./: .gitignore  CHANGELOG.md  LICENSE  README.md  resource.cabal
app/: Main.hs
src/Resource/: Lib.hs  Models.hs
