cabal-version:      2.4
name:               resource
version:            0.0.0.1
synopsis:           Console tool for project managers who were developers
license:            MIT
license-file:       LICENSE
author:             Artem Kanev
maintainer:         a-kanev@yandex.ru

extra-source-files: CHANGELOG.md

executable resource
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.1.0
        , resource
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:
        -haddock
        -Wall
        -Werror
        -Wredundant-constraints
        -threaded

library
    build-depends:
        base ^>=4.16.1.0
        , text
        , time
        , brick
        , directory
        , filepath
        , lens
        , persistent
        , persistent-sqlite
        , persistent-template
        , vty
        , vector
        , microlens-th
    hs-source-dirs: src
    exposed-modules: Resource.Lib, Resource.Models
    ghc-options:
        -haddock
        -Wall
        -Werror
        -Wredundant-constraints
        -threaded